export excel, complete project

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -62,6 +62,12 @@
                             </div>
                         </div>
                         <div class="w-100"></div>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="note">Ghi chú</label>
+                                <input type="text" class="form-control" name="address" value="" name="note">
+                            </div>
+                        </div>
                     </div>
                 </div><!-- END -->
             </div>
