--- a/src/main/resources/templates/order-detail.html
+++ b/src/main/resources/templates/order-detail.html
@@ -30,7 +30,7 @@
                                 <i class="fa-solid fa-magnifying-glass"></i></button>
                         </form>
                         <div class="d-flex justify-content-end col-6 mt-2">
-				            <a th:href="@{/vegetfood/admin/order(p=${currentPage})}"><i class="fa-solid fa-chevron-left"></i>&nbsp;Quay lại</a>
+				            <a th:href="@{/vegetfood/admin/order(p=${currentPage}, s=${pageSize})}"><i class="fa-solid fa-chevron-left"></i>&nbsp;Quay lại</a>
 				        </div>
                     </div>
                     <div class="container mt-3">
