--- a/src/main/resources/templates/product-add.html
+++ b/src/main/resources/templates/product-add.html
@@ -52,7 +52,7 @@
 						        </div>
 						    </div>
 						    <div class="mt-3">
-						        <a th:href="@{/vegetfood/admin/product(p=${currentPage})}" class="btn btn-danger">Đóng</a>
+						        <a th:href="@{/vegetfood/admin/product(p=${currentPage}, s=${pageSize})}" class="btn btn-danger">Đóng</a>
 						        <button type="submit" class="btn btn-primary mx-2">Lưu</button>
 						    </div>
 						</form>
