fix bugs in checkout

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -65,7 +65,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="note">Ghi chú</label>
-                                <input type="text" class="form-control" name="address" value="" name="note">
+                                <input type="text" class="form-control" value="" name="note">
                             </div>
                         </div>
                     </div>
